--- a/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
+++ b/trunk/ClientPresentationLayer/ClientPresentationLayer.csproj
@@ -69,6 +69,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionPresentation\QuestionExplainPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPresentation\QuestionExplainPanel.Designer.cs">
+      <DependentUpon>QuestionExplainPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="QuestionPresentation\Data\TestDataListViewItem.cs" />
     <Compile Include="QuestionPresentation\Data\TestDataListViewItemController.cs" />
     <Compile Include="QuestionPresentation\QuestionPresentPanel.cs">
@@ -105,6 +111,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QuestionPresentation\QuestionExplainPanel.resx">
+      <DependentUpon>QuestionExplainPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="QuestionPresentation\QuestionPresentPanel.resx">
       <DependentUpon>QuestionPresentPanel.cs</DependentUpon>
     </EmbeddedResource>
